INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
file(GLOB PROTOFILES *.proto)

INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
#PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER addressbook.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${PROTOFILES})
ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
